--- a/less/header.less
+++ b/less/header.less
@@ -353,3 +353,58 @@
         width: 11vh;
     }
  }
+ @media screen and (max-width: 768px) {
+
+ }
+@media screen and (max-width: 1024px) {
+    .header {
+        height: 70vh;
+    }
+    .header-content {
+        width: 95%;
+        margin-top: 20vh;
+    }
+    .box {
+        bottom: 10vh;
+    }
+    .box-shadow {
+        left: -5vh;
+        bottom: 30vh;
+        img {
+            height: 30vh;
+        }
+    }
+    .scroll {
+        top: -66vh;
+        left: -3vh;
+        p {
+            text-align: center;
+        }
+    }
+    .ball-top {
+       top: -35%;
+    }
+    .ball-on-bean {
+        left: 74%;
+        bottom: 52vh;
+    }
+}
+@media screen and (min-width: 1440px) {
+    .header-content {
+        width: 860px;
+    }
+    .scroll {
+        top: -105vh;
+        left: -6vh;
+        p {
+            text-align: center;
+        }
+    }
+    .ball-on-bean {
+        left: 72%;
+        bottom: 92vh;
+    }    
+    .ball-top {
+        top: -20%;
+    }
+}
