--- a/less/slider.less
+++ b/less/slider.less
@@ -1,7 +1,7 @@
 .carusel {
     width: 70%;
     height: 220px;
-    background-color: @slider-backgrund;
+    background-color: @slider-background;
     padding: 20px;
     margin: 50px 0;
     display: flex;
@@ -113,5 +113,10 @@
             width: 40px;
             height: 40px;
         }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .carusel {
+        width: 94%;
     }
 }
