--- a/less/unpack.less
+++ b/less/unpack.less
@@ -266,6 +266,7 @@
 
 @media screen and (max-width: 450px) {
     .unpack {
+        width: 100%;
         padding: 0;
         &-title {
             font-size: 44px;
@@ -418,4 +419,39 @@
         }
     }
 }
-
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .unpack {
+        width: 89%;
+    }
+    .unpack-title {
+        text-align: center;
+    }
+    .comfort {
+        margin-left: 17vh; 
+        img {
+            right: 90%;
+            top: -79%;
+        }
+    }
+    .appreciation {
+        margin-left: 6vh;
+        img {
+            right: 106%;
+            top: -80%;
+        }
+    }
+    .counting {
+        margin-left: 71vw;
+    }
+    .enthusiasm {
+        margin-left: 27vw;
+    }
+    .bubbles-and-balls {
+        img {
+            &.seven {
+                top: 43%;
+                right: 11%;
+            }
+        }
+    }
+}
